finished main layout

--- a/Client/src/app/styles/styles.less
+++ b/Client/src/app/styles/styles.less
@@ -5,12 +5,13 @@
 @import "sanitize.css/typography.css";
 
 :root {
-	--black: hsl(0, 0%, 8%);
-	--dark-grey: hsl(0, 0%, 12%);
-	--grey: hsl(0, 0%, 20%);
-	--white: hsl(0, 0%, 100%);
-	--neon-green: hsl(75, 94%, 57%);
-	--font-family: "Inter";
+	--dark-blue: #262e38;
+	--light-grey: #969fad;
+	--orange: #fc7614;
+	--pure-white: #fff;
+	--very-dark-blue: #131518;
+
+	--font-family: "Overpass", sans-serif;
 }
 
 html {
