--- a/Client/src/app/styles/styles.less
+++ b/Client/src/app/styles/styles.less
@@ -31,3 +31,19 @@ html {
 	clip: rect(0 0 0 0);
 	overflow: hidden;
 }
+
+// Default toast styles override
+
+.p-toast .p-toast-summary {
+	font-size: 1.4rem !important;
+}
+
+.p-toast .p-toast-detail {
+	font-size: 1.2rem !important;
+}
+
+.p-toast .p-toast-message .p-toast-message-content .p-toast-message-icon.p-icon {
+	margin-top: 0.3rem;
+	width: 1.4rem !important;
+	height: 1.4rem !important;
+}
