finished loading and spinner logic

--- a/Client/src/app/styles/styles.less
+++ b/Client/src/app/styles/styles.less
@@ -33,7 +33,6 @@ html {
 }
 
 // Default toast styles override
-
 .p-toast .p-toast-summary {
 	font-size: 1.4rem !important;
 }
@@ -46,4 +45,9 @@ html {
 	margin-top: 0.3rem;
 	width: 1.4rem !important;
 	height: 1.4rem !important;
+}
+
+// Default spinner styles override
+.p-progress-spinner-circle {
+	stroke: #fff !important;
 }
